fix(ui): stabilize scrollbar to ensure no content shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -182,6 +182,7 @@
 html,
 body {
   overflow: overlay;
+  scrollbar-gutter: stable;
 }
 
 * {
